separar la vista